# misaka_network

./: .gitignore  README.md  misaka_network.sln
LXHBlogSpace/back-end/: .gitignore  CMakeLists.txt  README.md
LXHBlogSpace/back-end/app/: CMakeLists.txt
LXHBlogSpace/back-end/app/admin/: main.cpp
LXHBlogSpace/back-end/app/content/: CMakeLists.txt  hottopic.py  main.cpp
LXHBlogSpace/back-end/app/member/: CMakeLists.txt  main.cpp
LXHBlogSpace/back-end/app/member/document/: api.md  lxhblogspace_member.sql  module.md
LXHBlogSpace/back-end/app/member/interfaces/: CMakeLists.txt  member.cpp  member.h  publish.cpp  publish.h
LXHBlogSpace/back-end/app/passport/: CMakeLists.txt  main.cpp
LXHBlogSpace/back-end/app/passport/interfaces/: CMakeLists.txt  passport.cpp  passport.h
LXHBlogSpace/front-end/: .gitignore  README.md
LXHBlogSpace/front-end/blog-edit-page/: package.json
LXHBlogSpace/front-end/blog-edit-page/public/: index.html
LXHBlogSpace/front-end/blog-edit-page/src/: index.css  index.js
LXHBlogSpace/front-end/blog-page/: README.md  package.json
LXHBlogSpace/front-end/blog-page/public/: index.html
LXHBlogSpace/front-end/blog-page/src/: App (2).js  App.css  App.js  index.js  (+1 more)
LXHBlogSpace/front-end/react-app/: build.tar  package.json
LXHBlogSpace/front-end/register-page/: package.json
LXHBlogSpace/front-end/user-page/: build.tar  package.json
LXHPassNote-server/: serverMain.cpp
LXHPassNote-server/document/: lxhpassnote_server_api.md  lxhpassnote_structure.markdown  lxhpassnote_structure.md  module_ac.md  module_cs.md  module_email.md  protocol.markdown  protocol.md
LXHPassNote-server/modules/: authentication.cpp  authentication.h  email.cpp  email.h  services.cpp  services.h  transmission.cpp  transmission.h
auto_sign_in/: CMakeLists.txt  README.md  auto_sign_in.vcxproj  auto_sign_in.vcxproj.filters  create.sql  install-pre-environment.sh  main.cpp
auto_sign_in/modules/: CMakeLists.txt  FileIO.cpp  FileIO.h  HTTPRequest.cpp  HTTPRequest.h  MySQL_connect.cpp  MySQL_connect.h  auto_sign_in.cpp  auto_sign_in.h
httpserver/: CMakeLists.txt  README.md  http.cpp  http_main.cpp  httpserver.vcxproj  httpserver.vcxproj.filters
httpserver/HTTPHandler/: CMakeLists.txt  HTTPHandler.cpp  HTTPHandler.h
httpserver/document/: README.md
httpserver/document/core/: structure.md
httpserver/httppraser/: praser.cpp  praser.h
httpserver/modules/: CMakeLists.txt  FileIO.cpp  FileIO.h  MySQL_connect.h
httpserver/script/: CMakeLists.txt  script.cpp
httpserver/src/core/: gateway.cpp  http_main.cpp  http_main.h  http_parser.cpp  http_parser.h  http_setting.cpp  http_setting.h
httpserver/src/modules/: FileIO.cpp  FileIO.h
tinyHttpd/: CMakeLists.txt  example.cpp  main.cpp  setting.conf  tinyHttpd.cpp  tinyHttpd.h  webstring.cpp  webstring.h
tinyHttpd/conf/: setting.conf
tinyHttpd/html/: index.html
tinyLogger/: README.md
tinyLogger/client/: concurent_test.cpp  concurrent_test.cpp  test.cpp  tinyLogger.cpp  tinyLogger.h
tinyLogger/doc/: README.md  conf.md  logger.md  network.md
tinyLogger/src/: CMakeLists.txt  conf.cpp  conf.h  logger.cpp  logger.h  main.cpp  network.cpp  network.h  tinyLogger
tinyLogger/src/conf/: setting.conf
tinyLogger/src/test/: config_test.cpp  logger_test.cpp  test.cpp
(+67 files in other folders)
